syntax = "proto3";

package todoproto;

import "v1/query_filter.proto";

message CreateUserRequest {
    string username = 1;
    string password = 2;
    bool is_admin = 3;

}

message CreateUserResponse {
    uint64 id = 1;
    string username = 2;
    string two_factor_secret = 3;
    bool is_admin = 4;
    uint64 password_last_changed_on = 5;
    uint64 created_on = 6;
    uint64 updated_on = 7;
    uint64 archived_on = 8;
}

message UpdateUserPasswordRequest {
    string old_password = 1;
    string new_password = 2;
    string totp_token = 3;
}

message UpdateUserResponse {
}

message GetUserRequest {
    uint64 user_id = 1;
}

message GetUserByUsernameRequest {
    string username = 1;
}

message GetUserResponse {
    uint64 id = 1;
    string username = 2;
    bool is_admin = 3;
    uint64 password_last_changed_on = 4;
    uint64 created_on = 5;
    uint64 updated_on = 6;
    uint64 archived_on = 7;
}

message DeleteUserRequest {
    uint64 user_id = 1;
}

message UserListRequest {
    QueryFilter filter = 1;
    uint64 user_id = 2;
}

message UserListResponse {
    repeated User users = 1;
}

message UserCountResponse {
    uint64 count = 1;
}

message User {
    uint64 id = 1;
    string username = 2;
    string hashed_password = 3;
    string two_factor_secret = 4;
    bool is_admin = 5;
    uint64 password_last_changed_on = 6;
    uint64 created_on = 7;
    uint64 updated_on = 8;
    uint64 archived_on = 9;
}
